myhelm/templates/fb-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nandeesh151/frontend_recipe3
          ports:
            - containerPort: 80 

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  type: ClusterIP  # Change this to ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend

# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  
#     service.beta.kubernetes.io/aws-load-balancer-target-type: "instance"  
#     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"  
# spec:
#   selector:
#     app: frontend
#   ports:
#     - protocol: TCP
#       port: 80  
#       targetPort: 80 
#   type: LoadBalancer
